# SEP-PM-Projekt

./: Project-Desciption  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
app/src/main/cpp/jni/: whisper_bridge.cpp
app/src/main/java/com/example/tut2/: ApiService.kt  AudioUtil.kt  ChatAdapter.kt  MainActivity.kt  Message.kt  RetrofitClient.kt  WhisperBridge.kt
app/src/main/res/drawable/: bot_bubble.xml  user_bubble.xml
app/src/main/res/layout/: activity_main.xml  item_bot.xml  item_user.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
